--- a/js/src/css/ws-page.css
+++ b/js/src/css/ws-page.css
@@ -1,5 +1,4 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
-
 .lp-body {
     padding-top: 55px;
     height: 100%;
@@ -9,6 +8,7 @@
     height: 55px !important;
     padding-top: 8px !important;
     min-width: 320px;
+    background-color: #292b2c !important;
 }
 
 /*
@@ -30,6 +30,28 @@
 .sidebar {
     padding-left: 0;
     padding-right: 0;
+}
+
+.nav-feather-img {
+    filter: invert(0.97);
+    margin-top: -4px;
+}
+
+.nav-menu-link {
+    margin-right: 10px;
+}
+
+nav::-webkit-scrollbar {
+    width: 0.5em;
+}
+
+nav::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.075);
+}
+
+nav::-webkit-scrollbar-thumb {
+    background-color: #DADADA;
+    border-radius: 5px;
 }
 
 .sidebar .nav {
@@ -58,74 +80,6 @@
     line-height: 1.1;
 }
 
-nav::-webkit-scrollbar {
-    width: 0.5em;
-}
-
-nav::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.075);
-}
-
-nav::-webkit-scrollbar-thumb {
-    background-color: #DADADA;
-    border-radius: 5px;
-}
-
-.navbar-logo {
-    padding-top: 4px;
-    display: inline-block;
-}
-
-.navbar-menu {
-    width: 240px;
-    position: fixed;
-    right: 0;
-    text-align: right;
-    padding-right: 10px;
-}
-
-.navbar-menu-item {
-    display: inline-block;
-}
-
-.bg-dark {
-    background-color: #292b2c !important;
-}
-
-.navbar-menu a.btn {
-    font-size: 20px !important;
-    margin-left: 10px;
-    margin-right: 5px;
-    min-width: 32px;
-    padding: 2px;
-    color: white;
-    height: 39px;
-}
-
-.dropdown-menu-right {
-    right: 0;
-    left: auto;
-}
-
-.navbar-menu a.active-all {
-    background-color: #2c5144;
-}
-
-.navbar-menu a.active-create {
-    background-color: #435360;
-}
-
-.navbar-menu a.btn:hover {
-    border-color: #67696a !important;
-    color: #eee;
-}
-
-.navbar-menu a.btn img {
-    filter: invert(1);
-    width: 32px;
-    height: 32px;
-}
-
-.navbar-menu .dropdown-toggle::after {
-    margin-left: 0;
+.main {
+    padding-top: 1rem !important;
 }
